--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,17 +7,35 @@ body {
   margin: 0;
 }
 
-.wrapper-registration {
+.wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-.input-box {
+.wrapper-registration {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin: 1.5rem 0;
-  width: 100%;
+  width: 300px; /* Set a fixed width for the container */
+}
+
+.input-box,
+.button-box {
+  width: 100%; /* Ensure each input box and button box takes the full width of the container */
+  margin: 1rem 0;
+}
+
+.custom-input {
+  width: 100%; /* Ensure custom input takes the full width */
+}
+
+span Link {
+  color: var(--primary-color);
+  font-weight: bold
+}
+
+.custom-button {
+  width: 100%; /* Ensure custom button takes the full width */
 }
