--- a/frontend/src/components/NavigationBar/NavigationBar.module.css
+++ b/frontend/src/components/NavigationBar/NavigationBar.module.css
@@ -1,8 +1,12 @@
-body{
+body {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
+}
+
+.nav-container {
+    width: 100%;
 }
 
 nav {
@@ -11,23 +15,50 @@ nav {
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center; /* Center the content horizontally */
     margin: 0;
-    padding: 0;
+    padding: 0 1rem;
+    position: fixed; /* Ensure the nav stays at the top */
+    top: 0;
+    left: 0;
 }
 
-
-nav ul{
+nav ul {
     list-style-type: none;
-    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
 }
 
 nav li {
-    color: white;
     display: block;
     text-align: center;
+    color: white;
     text-decoration: none;
 }
 
-nav a:hover{
-    color: #093def;
+nav a {
+    color: white;
+    text-decoration: none;
+    padding: 1rem;
+}
+
+
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    nav li {
+        width: 100%;
+    }
+
+    nav a {
+        padding: 1rem 0;
+        width: 100%;
+        text-align: center;
+    }
 }
