Add boilerplate for submission page

--- a/frontend/src/variables.css
+++ b/frontend/src/variables.css
@@ -4,4 +4,5 @@
     --primary-button-color: rgb(78, 93, 210);
     --secondary-button-color: rgb(216, 216, 216);
     --danger-button-color: rgb(217, 4, 41);
+    --background-color: rgb(236, 230, 240);
 }
