--- a/frontend/src/pages/SubmissionPage/SubmissionPage.css
+++ b/frontend/src/pages/SubmissionPage/SubmissionPage.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     height: 250px;
     width: 400px;
-    margin: 0 auto;
+    margin: 5rem auto;
 }
 
 .header {
