--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,41 +1,22 @@
 body {
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
 
 .wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .wrapper-registration {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 300px; /* Set a fixed width for the container */
-}
-
-.input-box,
-.button-box {
-  width: 100%; /* Ensure each input box and button box takes the full width of the container */
-  margin: 1rem 0;
-}
-
-.custom-input {
-  width: 100%; /* Ensure custom input takes the full width */
-}
-
-span Link {
-  color: var(--primary-color);
-  font-weight: bold
-}
-
-.custom-button {
-  width: 100%; /* Ensure custom button takes the full width */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
 }
