--- a/frontend/src/components/CustomForm/CustomForm.css
+++ b/frontend/src/components/CustomForm/CustomForm.css
@@ -1,4 +1,3 @@
-.input-box,
 .button-box {
     width: 100%;
     margin: 1rem 0;
@@ -15,4 +14,10 @@ span Link {
 
 .custom-button {
     width: 100%;
+}
+
+.two-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
