Fix already registered logic for authentication

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,3 +20,11 @@ body {
     align-items: center;
     width: 300px;
 }
+
+.error-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: medium;
+    color: var(--danger-button-color);
+}
